sistema de musica

--- a/engine.cfg
+++ b/engine.cfg
@@ -4,9 +4,13 @@ name="Hope-RPG"
 main_scene="res://scenes/splash.tscn"
 icon="res://icon.png"
 
+[autoload]
+
+save="*res://scripts/save.gd"
+music="*res://scenes/music.tscn"
+
 [display]
 
-fullscreen=true
 stretch_mode="viewport"
 stretch_aspect="keep"
 width=1280
